# NIFResearch

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
.superpowers/sdd/: final-cleanup-report.md
docs/superpowers/plans/: 2026-06-26-nifresearch-prototype.md  2026-06-28-nifresearch-v0.2.md  2026-06-28-nifresearch-v0.3-grey-sources.md
docs/superpowers/research/: grey-sources.md  source-catalog.md
docs/superpowers/specs/: 2026-06-26-nifresearch-prospect-research-design.md  2026-06-28-nifresearch-v0.2-design.md  2026-06-28-nifresearch-v0.3-grey-sources-design.md
src/nifresearch/: __init__.py  compliance.py  intake.py  models.py  orchestrator.py  registry_setup.py  resolution.py  validation.py
src/nifresearch/sources/: bar_lawyers.py  base.py  ckan.py  datagov_amutot.py  datagov_companies.py  datagov_doctors.py  mock.py
src/nifresearch/sources/grey/: apollo.py  base.py  clearbit.py  contactout.py  hunter.py  lusha.py  numverify.py  (+4 more)
src/nifresearch/web/: app.py  params.py
tests/: test_bar_lawyers.py  test_ckan.py  test_compliance.py  test_datagov_amutot.py  test_datagov_companies.py  test_datagov_doctors.py  test_grey_apollo.py  test_grey_base.py  test_grey_clearbit.py  test_grey_contactout.py  test_grey_hunter.py  test_grey_lusha.py  test_grey_numverify.py  test_grey_pdl.py  test_grey_pipl.py  test_grey_rocketreach.py  test_grey_twilio.py  test_intake.py  test_mock_source.py  test_models.py  test_orchestrator.py  test_registry_setup.py  test_resolution.py  test_smoke.py  test_sources_base.py  test_validation.py  test_web.py  test_web_params.py
(+4 files in other folders)
